--- a/src/index.html
+++ b/src/index.html
@@ -15,25 +15,26 @@
 		/>
 	</head>
 	<body>
-		<div class="continer-fluid">
+		<div>
 			<div class="row justify-content-center">
-				<div class="col-3">
+				<div class="col-4">
 					<h1>MQTT Client</h1>
 				</div>
 			</div>
 			<div class="row justify-content-center">
-				<div class="col-2">
+				<div class="col-4">
 					<h1>Temperature:</h1>
 				</div>
-				<div class="col-1">
+				<div class="col-2">
 					<h1 id="Room-Temp">2</h1>
 				</div>
 			</div>
 			<div class="row justify-content-center">
-				<div class="col-2">
+				<div class="col-4">
 					<h1>Humidity:</h1>
 				</div>
-				<div class="col-1">
+				<br />
+				<div class="col-2">
 					<h1 id="Room-Hum">2</h1>
 				</div>
 			</div>
